fix: prevent the scrollbar form being covered by the other elements

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -87,6 +87,11 @@ img {
   }
 }
 
+// Prevent the scrollbar from being covered by the other elements
+.os-scrollbar {
+  --uno: "z-100000";
+}
+
 // Change OverlayScrollbar color
 .os-scrollbar .os-scrollbar-handle {
   --os-handle-bg: rgba(120, 120, 140, 0.44);
